2004-03-25  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1,
	  timidity/effect.c, timidity/timidity.c:
	  Change specification of -EFns=? option (for 16-bit)
	  -EFns=0 : no noise shaping
	  -EFns=1 : traditional noise shaping
	  -EFns=2 : overdrive-like soft-clipping + new noise shaping
	  -EFns=3 : tube-amplifier-like soft-clipping + new noise shaping
	  -EFns=4 : new noise shaping (default)

2004-03-24  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/w32g.h, interface/w32g_c.c, interface/w32g_i.c:
	  Fix handling of canvas mode (W32GUI version)

2004-03-20  Saito <saito@intaa.net>

	* timidity/reverb.[ch], timidity/readmidi.c:
	  Implement XG Amp Simulator (incomplete).
	  Change algorithm of Overdrive / Distortion.

2004-03-20  Takaya Nogami <t-nogami@happy.email.ne.jp>

	* timidity/darwin_a.c: 24bit output support

2004-03-19  Saito <saito@intaa.net>

	* interface/w32g_ut2.[ch], interface/w32g_i.c:
	  Set GS LCD Mode to default.
	* interface/w32g_res.rc, timidity/optcode.h, timidity/effect.c:
	  Implement "soft-clipping before waveshaping" again.

2004-03-18  Saito <saito@intaa.net>

	* timidity/optcode.h:
	  Add imuldiv28() for waveshaping.

2004-03-18  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c: Bug fix.
	  Changed #extension level option's argument format.
	* doc/C/timidity.cfg.5, doc/ja_JP.eucJP/timidity.cfg.5: Updated.

2004-03-18  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mix.c (recompute_envelope, recompute_modulation_envelope):
	  fix for -m option (was not working correctly)

2004-03-17  Saito <saito@intaa.net>

	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
	  Fix GS LCD in Win32GUI interface.

2004-03-16  Saito <saito@intaa.net>

	* timidity/reverb.c, timidity/playmidi.c:
	  Bug fix.

2004-03-15  Saito <saito@intaa.net>

	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
	  Support for GS LCD in Win32GUI interface.

2004-03-14  Saito <saito@intaa.net>
